--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 
 body {
 
-	background-color: darkred;
+	background-color: darkslategrey;
 }
 
 #title-text {
 
 	text-align: center;
-	margin: 2vw 0px 2vw 0px;
-	font-size: 6vw;
+	margin: 3rem 0;
+	font-size: 3.5vw;
 	color: white;
 	font-family: sans-serif;
 }
@@ -16,7 +16,7 @@ body {
 /*style for starting block of maze*/
 .start {
 
-	padding: 1vw;
+	padding: 1rem;
 	border: 1px solid white;
 	background-color: green;
 	display: inline-block;
@@ -25,7 +25,7 @@ body {
 /*style for ending block of maze*/
 .end {
 
-	padding: 1vw;
+	padding: 1rem;
 	border: 1px solid white;
 	background-color: orange;
 	display: inline-block;
@@ -34,7 +34,7 @@ body {
 /*style for computer solution path*/
 .path {
 
-	padding: 1vw;
+	padding: 1rem;
 	border: 1px solid black;
 	background-color: white;
 	display: inline-block;
@@ -43,7 +43,7 @@ body {
 /*style for wall block (non-traversable block)*/
 .wall {
 
-	padding: 1vw;
+	padding: 1rem;
 	border: 1px solid white;
 	background-color: black;
 	display: inline-block;
@@ -52,7 +52,7 @@ body {
 /*style for free or open block (traversable block)*/
 .free {
 
-	padding: 1vw;
+	padding: 1rem;
 	border: 1px solid white;
 	background-color: blue;
 	display: inline-block;
@@ -61,36 +61,39 @@ body {
 .p-text {
 
 	margin: 1vw 0px 1vw 0px;
-	font-size: 2vw;
+	font-size: 2rem;
 	color: white;
 	font-family: serif;
-	visibility: show;
 }
 
 .p-text-hidden {
 
 	margin: 1vw 0px 1vw 0px;
-	font-size: 2vw;
+	font-size: 1rem;
 	color: white;
 	font-family: serif;
-	visibility: hidden;
+	display: none;
 }
 
-#maze-structure {
 
+#maze-structure {
+	display: grid;
+	grid-template-columns: repeat(40, 2rem);
+	grid-template-rows: repeat(20, 2rem);
 	text-align: center;
 	line-height: 0px;
-	margin-bottom: 5vw;
 }
 
 #info-icon {
 
 	width: 5%;
+	min-width: 3rem;
 	filter: invert(0.5);
-	left: 1vw;
-	top: 1vw;
+	left: 1rem;
+	top: 1rem;
 	position: absolute;
 	display: inline-block;
+	cursor: pointer;
 }
 
 #info-icon:hover {
